# FASTDDSServer

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/fastddsserver/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  HelloWorld.cxx  HelloWorld.h  HelloWorldPubSubTypes.cxx  HelloWorldPublisher.cpp  HelloWorldSubscriber.cpp  native-lib.cpp  test.cpp
app/src/main/cpp/ddsserver/: CMakeLists.txt
app/src/main/cpp/include/fastcdr/: config.h
app/src/main/cpp/include/fastrtps/: config.h
app/src/main/cpp/include/foonathan_memory/foonathan/memory/detail/: container_node_sizes_impl.hpp
app/src/main/java/com/example/fastddsserver/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/fastddsserver/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
